[gd_scene load_steps=72 format=2]

[ext_resource path="res://Code/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Code/Player/States/Basic_States.gd" type="Script" id=2]
[ext_resource path="res://Code/Player/States/Basic/IDLE.gd" type="Script" id=3]
[ext_resource path="res://Code/Player/States/Basic/WALK.gd" type="Script" id=4]
[ext_resource path="res://Code/Player/States/Basic/WALK_BACK.gd" type="Script" id=5]
[ext_resource path="res://Code/Player/States/Basic/HURT.gd" type="Script" id=6]
[ext_resource path="res://hero/walk b/0001.png" type="Texture" id=7]
[ext_resource path="res://hero/walk b/0002.png" type="Texture" id=8]
[ext_resource path="res://hero/walk b/0003.png" type="Texture" id=9]
[ext_resource path="res://hero/walk b/0004.png" type="Texture" id=10]
[ext_resource path="res://hero/walk b/0005.png" type="Texture" id=11]
[ext_resource path="res://hero/walk b/0006.png" type="Texture" id=12]
[ext_resource path="res://hero/walk b/0007.png" type="Texture" id=13]
[ext_resource path="res://hero/walk b/0008.png" type="Texture" id=14]
[ext_resource path="res://hero/walk b/0009.png" type="Texture" id=15]
[ext_resource path="res://hero/s punch/0001.png" type="Texture" id=16]
[ext_resource path="res://hero/s punch/0002.png" type="Texture" id=17]
[ext_resource path="res://hero/s punch/0003.png" type="Texture" id=18]
[ext_resource path="res://hero/s punch/0004.png" type="Texture" id=19]
[ext_resource path="res://hero/s punch/0005.png" type="Texture" id=20]
[ext_resource path="res://hero/s punch/0006.png" type="Texture" id=21]
[ext_resource path="res://hero/s punch/0007.png" type="Texture" id=22]
[ext_resource path="res://hero/walk/0001.png" type="Texture" id=23]
[ext_resource path="res://hero/walk/0002.png" type="Texture" id=24]
[ext_resource path="res://hero/walk/0003.png" type="Texture" id=25]
[ext_resource path="res://hero/walk/0004.png" type="Texture" id=26]
[ext_resource path="res://hero/walk/0005.png" type="Texture" id=27]
[ext_resource path="res://hero/walk/0006.png" type="Texture" id=28]
[ext_resource path="res://hero/walk/0007.png" type="Texture" id=29]
[ext_resource path="res://hero/walk/0008.png" type="Texture" id=30]
[ext_resource path="res://hero/walk/0009.png" type="Texture" id=31]
[ext_resource path="res://hero/idle/0001.png" type="Texture" id=32]
[ext_resource path="res://hero/idle/0002.png" type="Texture" id=33]
[ext_resource path="res://hero/idle/0003.png" type="Texture" id=34]
[ext_resource path="res://hero/idle/0004.png" type="Texture" id=35]
[ext_resource path="res://hero/idle/0005.png" type="Texture" id=36]
[ext_resource path="res://hero/idle/0006.png" type="Texture" id=37]
[ext_resource path="res://hero/idle/0007.png" type="Texture" id=38]
[ext_resource path="res://hero/idle/0008.png" type="Texture" id=39]
[ext_resource path="res://hero/idle/0009.png" type="Texture" id=40]
[ext_resource path="res://hero/punch/0001.png" type="Texture" id=41]
[ext_resource path="res://hero/punch/0002.png" type="Texture" id=42]
[ext_resource path="res://hero/punch/0003.png" type="Texture" id=43]
[ext_resource path="res://hero/punch/0004.png" type="Texture" id=44]
[ext_resource path="res://hero/punch/0005.png" type="Texture" id=45]
[ext_resource path="res://hero/punch/0006.png" type="Texture" id=46]
[ext_resource path="res://hero/punch/0007.png" type="Texture" id=47]
[ext_resource path="res://hero/w hurt/0001.png" type="Texture" id=48]
[ext_resource path="res://hero/w hurt/0002.png" type="Texture" id=49]
[ext_resource path="res://hero/w hurt/0003.png" type="Texture" id=50]
[ext_resource path="res://hero/w hurt/0004.png" type="Texture" id=51]
[ext_resource path="res://hero/w hurt/0005.png" type="Texture" id=52]
[ext_resource path="res://hero/w hurt/0006.png" type="Texture" id=53]
[ext_resource path="res://hero/w hurt/0007.png" type="Texture" id=54]
[ext_resource path="res://Code/Player/States/Moves/PUNCH.gd" type="Script" id=55]
[ext_resource path="res://Code/Player/States/Moves/SPUNCH.gd" type="Script" id=56]
[ext_resource path="res://Code/Player/Input/InputReceiver.gd" type="Script" id=57]
[ext_resource path="res://Code/Player/Input/ListAdd.gd" type="Script" id=58]
[ext_resource path="res://Code/Player/Input/MoveChecker.gd" type="Script" id=59]
[ext_resource path="res://Code/Player/Input/DirectionalChecker.gd" type="Script" id=60]
[ext_resource path="res://Code/Player/Input/PossibleChecker.gd" type="Script" id=61]
[ext_resource path="res://Code/Player/Physics.gd" type="Script" id=62]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "Walk Back",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "SPunch",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ) ],
"loop": true,
"name": "IDLE",
"speed": 5.0
}, {
"frames": [ ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ) ],
"loop": true,
"name": "Punch",
"speed": 5.0
}, {
"frames": [ ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ) ],
"loop": true,
"name": "Hurt",
"speed": 5.0
} ]

[sub_resource type="Animation" id=9]
resource_name = "HURT"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Hurt" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../Basic_States/HURT")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "End"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "IDLE"
length = 1.35
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "IDLE" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Melee/Attack:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Melee:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -16.1096, 6.4529 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Punch"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Punch" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 4, 6 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../Moves/PUNCH")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.35 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "End"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Melee/Attack:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Melee:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -16.1096, 6.4529 ), Vector2( -11.3083, -3.49265 ), Vector2( 61.7401, -38.3878 ), Vector2( 66.1985, -37.2733 ), Vector2( -12.6801, -0.406109 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "SPunch"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "SPunch" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../Moves/SPUNCH")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "End"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Melee:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -16.1096, 6.4529 ), Vector2( -16.1096, 6.4529 ), Vector2( 82.4886, 10.7398 ), Vector2( 82.4886, 10.7398 ), Vector2( -12.6801, 7.31028 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Melee/Attack:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=5]
resource_name = "Walk"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Melee/Attack:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Melee:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -16.1096, 6.4529 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Walk Back"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Walk Back" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Melee/Attack:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Melee:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -16.1096, 6.4529 ) ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 26.485, 80.895 )

[sub_resource type="CircleShape2D" id=8]
radius = 21.2879

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}
HP = 100

[node name="Basic_States" type="Node2D" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="IDLE" type="Node2D" parent="Basic_States"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="WALK" type="Node2D" parent="Basic_States"]
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="WALK_BACK" type="Node2D" parent="Basic_States"]
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="HURT" type="Node2D" parent="Basic_States"]
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprites" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Sprites"]
frames = SubResource( 1 )
animation = "Hurt"
frame = 6
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprites"]
autoplay = "IDLE"
anims/HURT = SubResource( 9 )
anims/IDLE = SubResource( 2 )
anims/Punch = SubResource( 3 )
anims/SPunch = SubResource( 4 )
anims/Walk = SubResource( 5 )
"anims/Walk Back" = SubResource( 6 )

[node name="Body" type="CollisionShape2D" parent="." groups=[
"Body",
]]
position = Vector2( -10.83, 1.80501 )
shape = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Melee" type="Area2D" parent="." groups=[
"Attack",
]]
position = Vector2( -16.1096, 6.4529 )

[node name="Attack" type="CollisionShape2D" parent="Melee" groups=[
"Attack",
]]
shape = SubResource( 8 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="Moves" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="PUNCH" type="Node2D" parent="Moves"]
script = ExtResource( 55 )
__meta__ = {
"_edit_lock_": true
}

[node name="SPUNCH" type="Node2D" parent="Moves"]
script = ExtResource( 56 )
__meta__ = {
"_edit_lock_": true
}

[node name="InputManager" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="InputReceiver" type="Node2D" parent="InputManager"]
script = ExtResource( 57 )

[node name="ListAdd" type="Node2D" parent="InputManager"]
script = ExtResource( 58 )

[node name="MoveChecker" type="Node2D" parent="InputManager"]
script = ExtResource( 59 )

[node name="DirectionalChecker" type="Node2D" parent="InputManager"]
script = ExtResource( 60 )

[node name="PossibleChecker" type="Node2D" parent="InputManager"]
script = ExtResource( 61 )

[node name="NETWORK" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Physics" type="Node2D" parent="."]
script = ExtResource( 62 )
__meta__ = {
"_edit_lock_": true
}

[node name="AI" type="Timer" parent="."]
[connection signal="body_entered" from="Melee" to="." method="_on_Melee_body_entered"]
[connection signal="timeout" from="AI" to="InputManager/InputReceiver" method="_on_AI_timeout"]
